Sat Jan 24 18:21:24 MET 1998 hannes
   * bug fixes for TEST_MAC_ORDER (binom.* polys-impl.h, spSpolyLoop.cc) 

Sat Jan 17 18:56:34 MET 1998 hannes
   * changes for TEST_MAC_ORDER, part 3 (binom.cc, binom.h, spSpolyLoop.cc)

Sat Jan 17 18:21:15 MET 1998 hannes
	* removed duplicate _memcpyW from mmalloc.c
	* fixed type cast in iplib.cc
	* changes for TEST_MAC_ORDER, part 2 (binom.cc, binom.h, spSpolyLoop.cc)

Fri Jan 16 15:30:07 MET 1998 Kai Krueger <krueger@mathematik.uni-kl.de>
	* extra.cc,febase.cc,febase.inc,grammar.y,iparith.cc
	* ipassign.cc,ipid.cc,ipid.h,iplib.cc,ipshell.h,misc.cc
	* mpsr_Put.cc,mpsr_Put.h,silink.cc,structs.h,subexpr.cc,subexpr.h
	* tesths.cc 
	  Implementation of new proc-scheme done.
	
Fri Jan 16 14:51:07 MET 1998 Kai Krueger <krueger@mathematik.uni-kl.de>
	* Makefile.in,tests/mpcheck,teste/comparecheck:
	  fixed use of correct Singular during checks

Fri Jan 16 09:23:07 MET 1998
        * changes for TEST_MAC_ORDER, part 1 (hannes)

Wed Jan 14 15:36:04 1998  Olaf Bachmann  <obachman@mathematik.uni-kl.de>

	* polys-impl.h (pMonAddFast): fixed handling of component

	* mmutil.c: added _memcpyW for DO_DEEP_PROFILE

	* binom.h: #undef TEST_MAC_ORDER as default

	* polys-impl.h: fixes to make things clearer and for
	  NO_EXP_VECTOR_OPS 

	* Makefile.in (Singularp): use static linking for 

Fri Dec 19 17:22:26 1997  Jens Schmidt  <schmidt@mathematik.uni-kl.de>

	* claptmpl.cc: template instantiation for `Array<REvaluation>'
	  added

	* fglmcomb.cc, fglmhom.cc, fglmzero.cc, claptmpl.cc: #include
	  directives fixed (templates/list.h renamed to
 	  templates/ftmpl_list.h)

Thu Dec 18 15:23:29 MET 1997
	* hannes:
	- removed type "binary" and handling routines
	(iparith.cc ipid.cc subexpr.cc tok.h)
	- fixed m16ex (doc/examples.doc)
	- fixed reference (doc/singular.doc, doc/start.doc)

Wed Dec 17 09:47:58 MEZ 1997 Kai Krueger <krueger@mathematik.uni-kl.de>
        * test/dbm_test.[in/out]: rewrite of dbm-tests.
	